WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27601
Fixing minor isses in QtLauncher
https://bugs.webkit.org/show_bug.cgi?id=27601
Summary
Fixing minor isses in QtLauncher
Zoltan Herczeg
Reported
2009-07-23 02:47:17 PDT
Issuse: - JavaScript window.close() sometimes crashes - MainWindows are not freed (memory leak) Unfortunately, WebCore still reports memory leaks, I will continue my work on them.
Attachments
Fixes for QtLauncher
(2.41 KB, patch)
2009-07-23 02:53 PDT
,
Zoltan Herczeg
hausmann
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Zoltan Herczeg
Comment 1
2009-07-23 02:53:42 PDT
Created
attachment 33322
[details]
Fixes for QtLauncher
Simon Hausmann
Comment 2
2009-07-23 03:23:10 PDT
Comment on
attachment 33322
[details]
Fixes for QtLauncher r=me
Simon Hausmann
Comment 3
2009-07-23 03:24:38 PDT
Landed in
r46264
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug