2009-07-23  Zoltan Herczeg  <zherczeg@inf.u-szeged.hu>

Reviewed by Simon Hausmann.

        Fixing two issues related to QtLauncher
          - MainWindow objects are not always freed after close
          - JavaScript window.close() sometimes crashes
        https://bugs.webkit.org/show_bug.cgi?id=27601

        * QtLauncher/main.cpp:
        (MainWindow::MainWindow):
        (main):

Canonical link: https://commits.webkit.org/37877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46264 268f45cc-cd09-0410-ab3c-d52691b4dbfc