WebKit/qt/QtLauncher/main.cpp
@@ -64,6 +64,8 @@ class MainWindow : public QMainWindow
     Q_OBJECT
 public:
     MainWindow(const QString& url = QString()): currentZoom(100) {
+        setAttribute(Qt::WA_DeleteOnClose);
+
         view = new QWebView(this);
         setCentralWidget(view);
 
@@ -75,7 +77,7 @@ public:
                 this, SLOT(setWindowTitle(const QString&)));
         connect(view->page(), SIGNAL(linkHovered(const QString&, const QString&, const QString &)),
                 this, SLOT(showLinkHover(const QString&, const QString&)));
-        connect(view->page(), SIGNAL(windowCloseRequested()), this, SLOT(deleteLater()));
+        connect(view->page(), SIGNAL(windowCloseRequested()), this, SLOT(close()));
 
         setupUI();
 
@@ -432,13 +434,13 @@ int main(int argc, char **argv)
         if (args.count() > 1)
             url = args.at(1);
 
-        MainWindow window(url);
+        MainWindow* window = new MainWindow(url);
 
         // Opens every given urls in new windows
         for (int i = 2; i < args.count(); i++)
-            window.newWindow(args.at(i));
+            window->newWindow(args.at(i));
 
-        window.show();
+        window->show();
         return app.exec();
     }
 }
